--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "beautiful-react-ui": "^0.57.1",
+    "react-icons": "^4.2.0",
     "lite": "^4.0.5",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
