--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "beautiful-react-ui": "^0.57.1",
-    "react-icons": "^4.2.0",
     "lite": "^4.0.5",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-reader": "^1.1.4",
     "react-flow-renderer": "^9.6.6",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.11",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xmldom": "^0.6.0"
   },
   "scripts": {
     "start": "craco start",
